--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
     background-image: url(./image/bg.jpg);
+    background-size: 100%;
 }
 index{
-    background-color: rgba(136, 80, 255, 0);
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 1.2em;
     font-weight: lighter;
     border: none;
@@ -17,8 +17,7 @@ index{
     right: 10%;
 }
 download{
-    background-color: rgba(136, 80, 255, 0);
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 1.2em;
     font-weight: lighter;
     border: none;
@@ -32,8 +31,7 @@ download{
     right: 6%;
 }
 chat{
-    background-color: rgba(136, 80, 255, 0);
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 1.2em;
     font-weight: lighter;
     border: none;
@@ -47,14 +45,18 @@ chat{
     right: 0;}
     index:hover {
         font-weight:bold;
-        color:black;
-        box-shadow: 0px 2px black;}
+        color:rgb(255, 255, 255);
+        box-shadow: 0px 2px rgb(255, 255, 255);}
     download:hover {
         font-weight:bold;
-        color:black;
-        box-shadow: 0px 2px black;}
+        color:rgb(255, 255, 255);
+        box-shadow: 0px 2px rgb(255, 255, 255);}
     chat:hover {
         font-weight:bold;
-        color:black;
-        box-shadow: 0px 2px black;
+        color:rgb(255, 255, 255);
+        box-shadow: 0px 2px rgb(255, 255, 255);
+}      
+.header {
+    background-color: #0787ff;
 }
+.id{size: 50;}
