--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-body{
-    background-image: url(./image/bg.jpg);
-    background-size: 100%;
-}
+
+    #background-scroll { width: 100%; height: 100%; position: fixed; top: 0; left: 0; z-index:-10;}
+    #bg1 {background: url('./image/backgrounds/1.jpg'); background-size: 100% auto; background-size: cover; width: 100%; height: 100%;}
+    #bg2 {background: url('./image/backgrounds/2.jpg'); background-size: 100% auto; background-size: cover; width: 100%; height: 100%;}
+    #bg3 {background: url('./image/backgrounds/3.jpg'); background-size: 100% auto; background-size: cover; width: 100%; height: 100%;}
+    #bg4 {background: url('./image/backgrounds/4.jpg'); background-size: 100% auto; background-size: cover; width: 100%; height: 100%;}
+    #bg5 {background: url('./image/backgrounds/5.jpg'); background-size: 100% auto; background-size: cover; width: 100%; height: 100%;}
+    #bg6 {background: url('./image/backgrounds/6.jpg'); background-size: 100% auto; background-size: cover; width: 100%; height: 100%;}
+
 index{
     color: rgb(255, 255, 255);
     font-size: 1.2em;
