--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
     #bg4 {background: url('./image/backgrounds/4.jpg'); background-size: 100% auto; background-size: cover; width: 100%; height: 100%;}
     #bg5 {background: url('./image/backgrounds/5.jpg'); background-size: 100% auto; background-size: cover; width: 100%; height: 100%;}
     #bg6 {background: url('./image/backgrounds/6.jpg'); background-size: 100% auto; background-size: cover; width: 100%; height: 100%;}
-
-index{
+.header{
     color: rgb(255, 255, 255);
     font-size: 1.2em;
     font-weight: lighter;
@@ -19,35 +18,18 @@ index{
     margin: 0 auto;
     position: absolute;
     top: 0;
-    right: 200px;
+}
+index{
+    right: 280px;
 }
 download{
-    color: rgb(255, 255, 255);
-    font-size: 1.2em;
-    font-weight: lighter;
-    border: none;
-    padding: 10px 20px;
-    margin-top: 20px;
-    cursor: pointer;
-    display: block;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
     right: 120px;
 }
 chat{
-    color: rgb(255, 255, 255);
-    font-size: 1.2em;
-    font-weight: lighter;
-    border: none;
-    padding: 10px 20px;
-    margin-top: 20px;
-    cursor: pointer;
-    display: block;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
     right: 0;}
+donate{
+    right: 200px;
+    }
     index:hover {
         font-weight:bold;
         color:rgb(255, 255, 255);
@@ -57,6 +39,10 @@ chat{
         color:rgb(255, 255, 255);
         box-shadow: 0px 2px rgb(255, 255, 255);}
     chat:hover {
+        font-weight:bold;
+        color:rgb(255, 255, 255);
+        box-shadow: 0px 2px rgb(255, 255, 255);}
+    donate:hover {
         font-weight:bold;
         color:rgb(255, 255, 255);
         box-shadow: 0px 2px rgb(255, 255, 255);}
