--- a/style.css
+++ b/style.css
@@ -67,3 +67,7 @@ donate{
 .title{
     font-size: 50px;
     margin-left:40% ;}
+@font-face {
+    font-family: comic sans ms;
+    src: url(./fonts/comic_sans_ms//comic.ttf);
+}
