--- a/style.css
+++ b/style.css
@@ -34,7 +34,12 @@ body{
     margin: 0 auto;
     position: absolute;
     top: 0;
-    background-color: #9ff5ff;
+    background-color: #9ff5ff;}
+    .logo {
+        border-right: 1px solid white;
+            border-bottom: 1px solid white;
+                border-left: 3px solid #000;
+                    border-top: 3px solid #000;
 }
 index{
     border-bottom-left-radius: 15%;
