--- a/style.css
+++ b/style.css
@@ -35,12 +35,6 @@ body{
     position: absolute;
     top: 0;
     background-color: #9ff5ff;}
-    .logo {
-        border-right: 2px solid white;
-        border-bottom: 2px solid white;
-        border-left: 3px solid #000;
-        border-top: 3px solid #000;
-}
 index{
     border-bottom-left-radius: 15%;
     right: 250px;
@@ -69,6 +63,26 @@ donate{
         font-weight:bold;
         color:rgb(255, 255, 255);
         box-shadow: 0px 2px rgb(255, 255, 255);}
+aifadian{
+    color:#946CE6;
+    cursor: pointer;
+    display:flex;
+    margin: 0 auto;
+    position: absolute;
+    background-color:white;
+    border-radius: 20px;
+    text-align:center;
+    border: 2px solid;
+    border-color: rgb(200, 200, 200);
+}
+span{
+    padding-right: 10px;
+    font-size: 54px;
+    font-weight: 750;
+}
+img{
+    padding-bottom: 0px;
+}
 .title{
     font-size: 50px;
     margin-left:40% ;}
